# TimberDB

./: .gitignore  Cargo.toml  README.md  USAGE.md  cargo.toml  timberdb.toml
src/: config.rs  error.rs  lib.rs  main.rs  output.glue
src/api/: client.rs  handlers.rs  mod.rs  models.rs  server.rs
src/network/: consensus.rs  mod.rs  transport.rs
src/query/: engine.rs  mod.rs  parser.rs
src/storage/: block.rs  compression.rs  index.rs  log_entry.rs  manager.rs  mod.rs  partition.rs
src/util/: logging.rs  mod.rs
tests/: run_tests.sh  setup_test.sh  test_api.sh
