[package]
name = "timberdb"
version = "0.1.0"
edition = "2021"
authors = ["TimberDB Team"]
description = "A high-performance distributed log database with configurable compression and block-based partitioning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timberdb/timberdb"
readme = "README.md"
keywords = ["database", "logging", "distributed"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# Compression
lz4_flex = "0.11"
zstd = "0.12"
snap = "1.1"
flate2 = "1.0"
crc32fast = "1.3"

# Storage
rocksdb = "0.20"
toml = "0.7"

# Network and API
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.3"

# Consensus
raft = "0.7"

# Parsing and queries
nom = "7.1"
regex = "1.8"
lru = "0.10"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.5.38", features = ["derive"] }

# Random number generation
rand = "0.8"

# Optional: Metrics and monitoring
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.19", optional = true }

[dev-dependencies]
tempfile = "3.5"
criterion = "0.5"
rstest = "0.17"
mockall = "0.11"
proptest = "1.2"

[features]
default = []
metrics = ["prometheus", "opentelemetry"]
jemalloc = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = true

[[bin]]
name = "timberdb"
path = "src/main.rs"

[lib]
name = "timberdb"
path = "src/lib.rs"
