[package]
name = "timberdb"
version = "2.0.0"
edition = "2021"
authors = ["TimberDB Team"]
description = "A high-performance embeddable log database with block-based storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OmniCloudOrg/timberdb"
keywords = ["database", "logging", "embedded", "time-series"]
categories = ["database-implementations"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
parking_lot = "0.12"
crc32fast = "1.3"
futures = "0.3"
toml = "0.8.22"
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Compression
lz4_flex = "0.11"
zstd = { version = "0.13", optional = true }

# HTTP API (optional)
warp = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }

# CLI (optional)
clap = { version = "4.0", features = ["derive"], optional = true }

# Logging
log = "0.4"
env_logger = { version = "0.10", optional = true }

[features]
default = ["compression", "api"]
compression = ["zstd"]
api = ["tokio", "warp", "serde_json"]
cli = ["clap", "env_logger", "tokio"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[[bin]]
name = "timberdb"
required-features = ["cli"]